[package]
name = "fc-consensus"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sp-blockchain = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sp-runtime = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sp-api = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sc-client-api = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sp-block-builder = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sp-inherents = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fc-db = { version = "2.0.0-dev", path = "../db" }
sp-consensus = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", version = "0.10.0-dev", git = "https://github.com/cennznet/substrate" }
sc-consensus = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", version = "0.10.0-dev", git = "https://github.com/cennznet/substrate" }
log = "0.4.8"
futures = { version = "0.3.17", features = ["compat"] }
sp-timestamp = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
derive_more = "0.99.2"
prometheus-endpoint = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", version = "0.10.0-dev", package = "substrate-prometheus-endpoint", git = "https://github.com/cennznet/substrate" }
async-trait = "0.1"