[package]
name = "fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-pubsub = "18.0"
log = "0.4.8"
ethereum-types = "0.12"
evm = { git = "https://github.com/rust-blockchain/evm", rev = "52d5fe5d1fd665a495ea34cc67c5f0c6bc6dd23e", default-features = false, features = ["with-codec"] }
fc-consensus = { version = "2.0.0-dev", path = "../consensus" }
fc-db = { version = "2.0.0-dev", path = "../db" }
fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage"}
sp-io = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sp-runtime = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sp-api = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sp-transaction-pool = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sc-transaction-pool = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sp-storage = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sp-blockchain = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sp-block-builder = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sc-transaction-pool-api = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sc-service = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", version = "0.10.0-dev", git = "https://github.com/cennznet/substrate" }
sc-client-api = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sc-rpc = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", git = "https://github.com/cennznet/substrate" }
sc-network = { rev = "ec4c632f00178131f8891d564bd9ae9742a7ec1c", version = "0.10.0-dev", git = "https://github.com/cennznet/substrate" }
pallet-evm = { version = "6.0.0-dev", path = "../../frame/evm" }
fp-evm = { version = "3.0.0-dev", path = "../../primitives/evm" }
ethereum = { version = "0.11.1", features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "2.0.0" }
rlp = "0.5"
futures = { version = "0.3.1", features = ["compat"] }
sha3 = "0.8"
rustc-hex = { version = "2.1.0", default-features = false }
libsecp256k1 = "0.3"
rand = "0.7"
lru = "0.6.6"
parking_lot = "0.11.1"
tokio = { version = "1.14", features = [ "sync" ] }

[features]
rpc_binary_search_estimate = []
