[package]
name = "fc-rpc"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-pubsub = "18.0"
log = "0.4.8"
ethereum-types = "0.13.1"
evm = { git = "https://github.com/rust-blockchain/evm", rev = "0b686f8c2c83a52638917caa649dc23302fda80d", default-features = false, features = ["with-codec"] }
fc-consensus = { version = "2.0.0-dev", path = "../consensus" }
fc-db = { version = "2.0.0-dev", path = "../db" }
fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }
fp-consensus = { version = "2.0.0-dev", path = "../../primitives/consensus" }
fp-rpc = { version = "3.0.0-dev", path = "../../primitives/rpc" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/storage"}
sp-io = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate" }
sp-runtime = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate" }
sp-api = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate" }
sp-transaction-pool = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate" }
sc-transaction-pool = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate" }
sp-storage = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate" }
sp-blockchain = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate" }
sp-block-builder = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate" }
sc-transaction-pool-api = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate" }
sc-service = { rev = "254219721084b533626ffa16b74c415771d46747", version = "0.10.0-dev", git = "https://github.com/cennznet/substrate" }
sc-client-api = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate" }
sc-rpc = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate" }
sc-network = { rev = "254219721084b533626ffa16b74c415771d46747", version = "0.10.0-dev", git = "https://github.com/cennznet/substrate" }
pallet-evm = { version = "6.0.0-dev", path = "../../frame/evm" }
fp-evm = { version = "3.0.0-dev", path = "../../primitives/evm" }
ethereum = { version = "0.12.0",  features = ["with-codec", "with-serde"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
rlp = "0.5"
futures = { version = "0.3.1", features = ["compat"] }
sha3 = "0.8"
rustc-hex = { version = "2.1.0", default-features = false }
libsecp256k1 = "0.3"
rand = "0.7"
lru = "0.6.6"
parking_lot = "0.11.1"
tokio = { version = "1.14", features = [ "sync" ] }

[features]
rpc_binary_search_estimate = []
