[package]
name = "pallet-evm"
version = "6.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "FRAME EVM contracts pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false, git = "https://github.com/cennznet/substrate" }
frame-system = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false, git = "https://github.com/cennznet/substrate" }
pallet-timestamp = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false, git = "https://github.com/cennznet/substrate" }
pallet-balances = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false, git = "https://github.com/cennznet/substrate" }
sp-core = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false, git = "https://github.com/cennznet/substrate" }
sp-runtime = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false, git = "https://github.com/cennznet/substrate" }
sp-std = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false, git = "https://github.com/cennznet/substrate" }
sp-io = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", default-features = false, git = "https://github.com/cennznet/substrate" }
frame-benchmarking = { rev = "2db18f864ae2bb50e60e497b7ac2c521daf83af6", git = "https://github.com/cennznet/substrate", default-features = false, optional = true }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../primitives/evm" }
primitive-types = { version = "0.10.0", default-features = false, features = ["rlp", "byteorder"] }
rlp = { version = "0.5", default-features = false }
evm = { version = "0.33.0", default-features = false, features = ["with-codec"] }
evm-runtime = { version = "0.33.0", default-features = false }
evm-gasometer = { version = "0.33.0", default-features = false }
sha3 = { version = "0.8", default-features = false }
log = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"frame-benchmarking/std",
	"sp-std/std",
	"fp-evm/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"evm/std",
	"evm/with-serde",
	"evm-runtime/std",
	"evm-gasometer/std",
	"pallet-timestamp/std",
	"log/std",
	"hex/std",
	"scale-info/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
]
