[package]
name = "fp-rpc"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io"]
edition = "2018"
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Substrate."
license = "Apache-2.0"

[dependencies]
sp-core = { rev = "254219721084b533626ffa16b74c415771d46747", default-features = false, git = "https://github.com/cennznet/substrate" }
sp-api = { rev = "254219721084b533626ffa16b74c415771d46747", default-features = false, git = "https://github.com/cennznet/substrate" }
fp-evm = { version = "3.0.0-dev", default-features = false, path = "../../primitives/evm" }
ethereum = { version = "0.12.0",  default-features = false, features = ["with-codec", "with-serde"] }
ethereum-types = { version = "0.13.1", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-runtime = { rev = "254219721084b533626ffa16b74c415771d46747", default-features = false, git = "https://github.com/cennznet/substrate" }
sp-std = { rev = "254219721084b533626ffa16b74c415771d46747", default-features = false, git = "https://github.com/cennznet/substrate" }
sp-io = { rev = "254219721084b533626ffa16b74c415771d46747", default-features = false, git = "https://github.com/cennznet/substrate" }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-api/std",
	"fp-evm/std",
	"ethereum/std",
	"ethereum-types/std",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"scale-info/std",
]
