[package]
name = "fp-self-contained"
version = "1.0.0-dev"
license = "Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "Primitive Ethereum abstractions for Substrate."
documentation = "https://docs.rs/fp-ethereum"

[dependencies]
ethereum = { version = "0.12.0",  default-features = false, features = ["with-codec", "with-serde"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
parity-util-mem = { version = "0.11", optional = true }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate", default-features = false }
sp-runtime = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate", default-features = false }
sp-io = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate", default-features = false }
sha3 = { version = "0.8", default-features = false }

frame-support = { rev = "254219721084b533626ffa16b74c415771d46747", git = "https://github.com/cennznet/substrate", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"ethereum/std",
	"sp-core/std",
	"sp-runtime/std",
	"scale-info/std",
	"parity-util-mem",
	"sha3/std",
	"frame-support/std",
]